# hectic_dungeon

./: Cargo.toml  README.md  justfile
.github/ISSUE_TEMPLATE/: design-document.md
.github/workflows/: release.yaml
assets/Necromancer_Dungeon_Pack/: README.txt
assets/beings/: archer.being
assets/maps/: bandit_camp.ldtk  dungeon.ldtk  testing.ldtk  testing.tmx
assets/shaders/: outline_material.wgsl
assets/tilesheet/: ability_slot.ase  aim_marker.ase  armor_slot.ase  attack_marker.ase  bandit_hideout.ase  dungeon.ase  heart.ase  inventory_bg.ase  orc.ase  pico-extended.ase  player.ase  tileset.tsx  tilesheet.ase  weapon_slot.ase
design/: characters.md  design.md
design/dungeons/: bandit_hideout.md
design/old/dungeons/: bandit_hideout.md  dungeons.md
dev/hooks/: pre-commit
src/: animation.rs  app.rs  assets.rs  attack.rs  buffs.rs  camera.rs  cli.rs  constants.rs  enemy.rs  game.rs  grid.rs  item.rs  layers.rs  level.rs  lib.rs  main.rs  map.rs  movement.rs  player.rs  prefab.rs  room.rs  spritesheet.rs  spritesheet_constants.rs  utils.rs  weapon.rs  weapons.rs
src/ability/: mod.rs
src/ai/: mod.rs  picker.rs  simple_ai.rs
src/enemy/: mod.rs  pathfinding.rs  prefab.rs  simple_ai.rs
src/enviro/: arrow_trap.rs  collapsable_floor.rs  destructible.rs  door.rs  dropped_item.rs  mod.rs  spike_trap.rs  water_tile.rs
src/material/: mod.rs  outline.rs
src/player/: ability.rs  controller.rs  inventory.rs  mod.rs  prefab.rs  useraction.rs
src/screens/: ingame.rs  level_select.rs  main_menu.rs  mod.rs  state.rs  utils.rs
src/screens/components/: health.rs  inventory.rs  mod.rs
src/ui/: attack_animation.rs  attack_indicator.rs  floating_text.rs  mod.rs  move_indicator.rs  particles.rs  projectile.rs
tools/: runWeb
