[package]
name = "hectic_dungeon"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["nithinmuthukumar", "MrPicklePinosaur"]
description = "Turn based"
repository = "https://github.com/HalfPixelStudios/hectic_dungeon.git"

[features]
default = ["bevy_sprite", "bevy_ui"]
bevy_sprite = ["bevy/bevy_sprite", "bevy/bevy_render"]
bevy_ui = ["bevy/bevy_ui", "bevy/bevy_text", "bevy/bevy_render"]

[dependencies]
bevy = { version = "0.7.0", default-features = false, features = [ "render", "animation", "bevy_winit", "bevy_gilrs", "png", "hdr", "filesystem_watcher", "x11", "trace" ] }
bevy_prototype_debug_lines = { version = "0.7.0" }
bevy_ecs_ldtk = { version = "0.3.0", features = [ "atlas" ] }
bevy_editor_pls = { git = "https://github.com/jakobhellermann/bevy_editor_pls", rev = "63872f9d0ecbe94be1a3ebe4087797154f3bb00e" }
bevy_bobs = { git = "https://github.com/HalfPixelStudios/bevy_bobs", features = ["health_bar", "prefab"] }
leafwing-input-manager = { version = "0.4.1" }
iyes_loopless = "0.6.1"

ron = "0.7"
anyhow = "1.0.58"
thiserror = "1"
autodefault = { version = "2.0.0" }
serde = { version = "1", features = ["derive"] }
rand = { version = "0.8.5" }
enum-map = { version = "2.4.0", features = ["serde"] }
priority-queue = { version = "1.2.3" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
