[package]
name = "hectic_dungeon"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["nithinmuthukumar", "MrPicklePinosaur"]
description = "Turn based"
repository = "https://github.com/HalfPixelStudios/hectic_dungeon.git"

[features]
default = ["bevy_sprite", "bevy_ui"]
bevy_sprite = ["bevy/bevy_sprite", "bevy/bevy_render"]
bevy_ui = ["bevy/bevy_ui", "bevy/bevy_text", "bevy/bevy_render"]

[dependencies]
bevy = { version = "0.8", default-features = false, features = [ "render", "animation", "bevy_winit", "bevy_gilrs", "png", "hdr", "filesystem_watcher", "x11", "trace" ] }
bevy_ecs_ldtk = { git = "https://github.com/Trouv/bevy_ecs_ldtk", features = [ "atlas" ] }
# bevy_bobs = { path = "../bevy_bobs", features = ["health_bar", "prefab", "physics_2d", "grid"] }
bevy_bobs = { git = "https://github.com/HalfPixelStudios/bevy_bobs", features = ["health_bar", "prefab", "physics_2d", "grid"] }
leafwing-input-manager = { version = "0.5" }
iyes_loopless = { version = "0.7" }
big-brain = { version = "0.12" }
bevy-inspector-egui = { version = "0.12" }

ron = "0.7"
anyhow = "1"
thiserror = "1"
autodefault = { version = "2" }
serde = { version = "1", features = ["derive"] }
rand = { version = "0.8.5" }
enum-map = { version = "2.4.0", features = ["serde"] }
priority-queue = { version = "1.2.3" }
pino_argparse = { git = "https://github.com/MrPicklePinosaur/pino_argparse" }
pino_utils = { git = "https://github.com/MrPicklePinosaur/pino_utils" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
